Add code and input for Day 2

--- a/advent_of_code_2017.ipynb
+++ b/advent_of_code_2017.ipynb
@@ -156,6 +156,144 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem Two!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, we need to:\n",
+    "- read a file, with lines of numbers\n",
+    "- for each line, find the difference between largest and smallest\n",
+    "- sum those differences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "day_two_lines = []\n",
+    "with open('day2.txt', 'r') as f:\n",
+    "    reader = csv.reader(f, delimiter='\\t')\n",
+    "    for row in reader:\n",
+    "        day_two_lines += [[int(el) for el in row]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "def checksum(spreadsheet: List[List[int]]):\n",
+    "    total = 0\n",
+    "    for row in spreadsheet:\n",
+    "        total += max(row) - min(row)\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test\n",
+    "part_one_spreadsheet_test = [[5, 1, 9, 5], [7, 5, 3], [2, 4, 6, 8]]\n",
+    "assert checksum(part_one_spreadsheet_test) == 18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41887"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "checksum(day_two_lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part Two\n",
+    "\n",
+    "Now we care about numbers in a spreadsheet's row that evenly divide each other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checksum_part_two(spreadsheet: List[List[int]]):\n",
+    "    total = 0\n",
+    "    for row in spreadsheet:\n",
+    "        for i, val in enumerate(row):\n",
+    "            for test in row[(i+1):]:\n",
+    "                # go through the rest of the row\n",
+    "                if val > test:\n",
+    "                    tmp = val / test\n",
+    "                else:\n",
+    "                    tmp = test / val\n",
+    "                if tmp.is_integer():\n",
+    "                    total += tmp\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test\n",
+    "part_two_spreadsheet_test = [[5, 9, 2, 8], [9, 4, 7, 3], [3, 8, 6, 5]]\n",
+    "assert checksum_part_two(part_two_spreadsheet_test) == 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "226.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "checksum_part_two(day_two_lines)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
