Add solutions for Day 3

--- a/advent_of_code_2017.ipynb
+++ b/advent_of_code_2017.ipynb
@@ -183,7 +183,7 @@
     "with open('day2.txt', 'r') as f:\n",
     "    reader = csv.reader(f, delimiter='\\t')\n",
     "    for row in reader:\n",
-    "        day_two_lines += [[int(el) for el in row]]"
+    "        day_two_lines.append([int(el) for el in row])"
    ]
   },
   {
@@ -291,6 +291,519 @@
    ],
    "source": [
     "checksum_part_two(day_two_lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem Three!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, so... if we create the full spiral for each of odd squares, then we can determine which odd square we need to compute up until based on the input. If the input is between two odd squares `x` and `y`, then we know that the input value will lie somewhere on the outer ring.\n",
+    "\n",
+    "Once we know which odd square `y` is the smallest odd square larger than the input, then we can create the outer ring and use the relative position to compute the manhattan distance between that value and the center."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def manhattan_distance(point_one, point_two):\n",
+    "    return abs(point_one[0] - point_two[0]) + abs(point_one[1] - point_two[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import ceil, sqrt\n",
+    "\n",
+    "def find_next_largest_odd_square(n: int):\n",
+    "    root = ceil(sqrt(n))\n",
+    "    if root % 2 == 0:\n",
+    "        return (root + 1) ** 2\n",
+    "    else:\n",
+    "        return root ** 2\n",
+    "\n",
+    "assert find_next_largest_odd_square(12) == 25\n",
+    "assert find_next_largest_odd_square(1) == 1\n",
+    "assert find_next_largest_odd_square(23) == 25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we need to find the position on the outer ring of the input. We know that if the next largest odd square is `(2*k + 1) ** 2`, then the \"length\" of the outer ring is `(2*k) ** 2`, where each side has length `(2*k + 1)`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can avoid some coordinate-position-finding if the input value is an odd square, so let's verify that it's not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_three_input = 265149\n",
+    "sqrt(day_three_input).is_integer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7 % 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "9 % 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, so let's find the coordinate position of the value on our outer ring.\n",
+    "\n",
+    "In particular, we are concerned with the side-length of the square `(2*k + 1)` and the distance of the input value from a side's midpoint.\n",
+    "\n",
+    "If the next-largest odd square is `(2 * k + 1) ** 2`, then we compute the difference `(2 * k + 1) ** 2 - input`, and then compute the modulus of this value by `2 * k`. This gives us the off-set from the corner.\n",
+    "\n",
+    "Then, with side lenghts of `(2 * k + 1)`, we'll always need to move `k` spaces \"in\" (horizontally or vertically), and then `abs(((2 * k + 1) ** 2 - input) % (2 * k) - k)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(hm, maybe we don't need the manhattan distance function, after all!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_steps(value):\n",
+    "    if value == 1:\n",
+    "        return 0\n",
+    "    side_length = sqrt(find_next_largest_odd_square(value))\n",
+    "    k = (side_length - 1) // 2\n",
+    "    offset = abs((side_length ** 2 - value) % (2 * k) - k)\n",
+    "    return k + offset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "13 % 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tests\n",
+    "assert count_steps(1) == 0\n",
+    "assert count_steps(12) == 3\n",
+    "assert count_steps(23) == 2\n",
+    "assert count_steps(1024) == 31"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "438.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_steps(day_three_input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part two!\n",
+    "in which it appears as though we may have to compute the spiral!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "is it a coincidence that the bottom right diagonal appears to be a square?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n147, 142, 133, 122,  59\\n304,   5,   4,   2,  57\\n330, 110,   1,   1,  54\\n351,  11,  23,  25,  26\\n362, 747, 806, 880, 931\\n'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "147, 142, 133, 122,  59\n",
+    "304,   5,   4,   2,  57\n",
+    "330, 110,   1,   1,  54\n",
+    "351,  11,  23,  25,  26\n",
+    "362, 747, 806, 880, 931\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some observations:\n",
+    "- each next square includes the previous value as part of the sum\n",
+    "- each square will border some previous values. can we generalize the squares which will be bordered using a similar methodology to the previous part?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if we start at Square 1, then the coordinates take on these values:\n",
+    "1. (0, 0)\n",
+    "2. (1, 0)\n",
+    "3. (1, 1)\n",
+    "4. (0, 1)\n",
+    "5. (-1, 1)\n",
+    "6. (-1, 0)\n",
+    "7. (-1, -1)\n",
+    "8. (0, -1)\n",
+    "9. (1, -1)\n",
+    "10. (2, -1)\n",
+    "11. (2, 0)\n",
+    "12. (2, 1)\n",
+    "13. (2, 2)\n",
+    "14. (1, 2)\n",
+    "15. (0, 2)\n",
+    "16. (-1, 2)\n",
+    "17. (-2, 2)\n",
+    "18. (-2, 1)\n",
+    "19. (-2, 0)\n",
+    "20. (-2, -1)\n",
+    "21. (-2, -2)\n",
+    "22. (-1, -2)\n",
+    "23. (0, -2)\n",
+    "24. (1, -2)\n",
+    "25. (2, -2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some observations about this pattern:\n",
+    "- `abs(x), abs(y) <= k` where k is defined by the next odd square as `(2 * k + 1) ** 2`.\n",
+    "- `abs(x) + abs(y) <= 2 * k`\n",
+    "- we're always moving in just _one_ direction: x or y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Point(object):\n",
+    "    def __init__(self, x, y, value, direction=None):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.value = value\n",
+    "        self.direction = direction if direction is not None else tuple([1, 0])\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f'Point({str(self.x)}, {str(self.y)})'\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        return self.x == other.x and self.y == other.y\n",
+    "    \n",
+    "def next_direction(dir_):\n",
+    "    if dir_ == (1, 0):\n",
+    "        return (0, 1)\n",
+    "    if dir_ == (0, 1):\n",
+    "        return (-1, 0)\n",
+    "    if dir_ == (-1, 0):\n",
+    "        return (0, -1)\n",
+    "    if dir_ == (0, -1):\n",
+    "        return (1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(10, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Point(10, 11, (1, 0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1 + (2, 1)[0], 2 + (2, 1)[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Spiral():\n",
+    "    def __init__(self):\n",
+    "        self.data = {\n",
+    "            1: Point(0, 0, value=1),\n",
+    "            2: Point(1, 0, value=1)\n",
+    "        }\n",
+    "        self.i = 2\n",
+    "        self.values = {\n",
+    "            1: 1,\n",
+    "            2: 1\n",
+    "        }\n",
+    "\n",
+    "    def compute_value(self, n):\n",
+    "        if n > self.i:\n",
+    "            while self.i <= n:\n",
+    "                self.data[self.i + 1] = self.add_point(self.i+1, self.data[self.i])\n",
+    "                self.i += 1\n",
+    "        return self.data[n]\n",
+    "    \n",
+    "    def add_point(self, j, prev_point):\n",
+    "        next_odd_square = find_next_largest_odd_square(j)\n",
+    "        k = (sqrt(next_odd_square) - 1) // 2\n",
+    "        x_possible, y_possible = prev_point.x + prev_point.direction[0], prev_point.y + prev_point.direction[1]\n",
+    "        if abs(x_possible) > k or abs(y_possible) > k:\n",
+    "            direction = next_direction(prev_point.direction)\n",
+    "            return Point(prev_point.x + direction[0], prev_point.y + direction[1], self.find_values(prev_point.x + direction[0], prev_point.y + direction[1]), direction)\n",
+    "        else:\n",
+    "            return Point(x_possible, y_possible, self.find_values(x_possible, y_possible), prev_point.direction)\n",
+    "    \n",
+    "    def find_values(self, x, y):\n",
+    "        total = 0\n",
+    "        for i in range(-1, 2):\n",
+    "            for j in range(-1, 2):\n",
+    "                new_x = x + i\n",
+    "                new_y = y + j\n",
+    "                for key, value in self.data.items():\n",
+    "                    if Point(new_x, new_y, 0) == value:\n",
+    "                        total += value.value\n",
+    "        return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Spiral()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(1, 0)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.compute_value(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "806"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.compute_value(23).value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tests\n",
+    "assert s.compute_value(1).value == 1\n",
+    "assert s.compute_value(2).value == 1\n",
+    "assert s.compute_value(3).value == 2\n",
+    "assert s.compute_value(4).value == 4\n",
+    "assert s.compute_value(9).value == 25\n",
+    "assert s.compute_value(23).value == 806"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "266330\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 10\n",
+    "while s.compute_value(i).value <= day_three_input:\n",
+    "    i += 1\n",
+    "print(s.compute_value(i).value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WAHOO!"
    ]
   },
   {
