Add code and input for Day 4

--- a/advent_of_code_2017.ipynb
+++ b/advent_of_code_2017.ipynb
@@ -807,6 +807,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 4\n",
+    "determining valid passphrases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passphrase_list = []\n",
+    "with open('day4.txt', 'r') as f:\n",
+    "    for line in f.read().splitlines():\n",
+    "        passphrase_list.append(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pphsv',\n",
+       " 'ojtou',\n",
+       " 'brvhsj',\n",
+       " 'cer',\n",
+       " 'ntfhlra',\n",
+       " 'udeh',\n",
+       " 'ccgtyzc',\n",
+       " 'zoyzmh',\n",
+       " 'jum',\n",
+       " 'lugbnk']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passphrase_list[0].split(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_valid(phrase: str):\n",
+    "    tmp = set()\n",
+    "    for word in phrase.split(' '):\n",
+    "        if word in tmp:\n",
+    "            return False\n",
+    "        else:\n",
+    "            tmp.add(word)\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tests\n",
+    "assert is_valid('aa bb cc dd ee')\n",
+    "assert not is_valid('aa bb cc dd aa')\n",
+    "assert is_valid('aa bb cc dd aaa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "466"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_valid(phrases, validity_check=is_valid):\n",
+    "    total = 0\n",
+    "    for phrase in phrases:\n",
+    "        if validity_check(phrase):\n",
+    "            total += 1\n",
+    "    return total\n",
+    "\n",
+    "count_valid(passphrase_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part two!\n",
+    "\n",
+    "now, the words cannot be anagrams of each other. so, we'll sort each word before adding it to our set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "251"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_valid_two(phrase: str):\n",
+    "    tmp = set()\n",
+    "    for word in phrase.split(' '):\n",
+    "        if ''.join(sorted(word)) in tmp:\n",
+    "            return False\n",
+    "        else:\n",
+    "            tmp.add(''.join(sorted(word)))\n",
+    "    return True\n",
+    "\n",
+    "count_valid(passphrase_list, is_valid_two)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
