Minor cleanup/documentation for Day 3's code

--- a/advent_of_code_2017.ipynb
+++ b/advent_of_code_2017.ipynb
@@ -652,26 +652,6 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 3)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(1 + (2, 1)[0], 2 + (2, 1)[1])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
    "outputs": [],
    "source": [
     "class Spiral():\n",
@@ -681,10 +661,6 @@
     "            2: Point(1, 0, value=1)\n",
     "        }\n",
     "        self.i = 2\n",
-    "        self.values = {\n",
-    "            1: 1,\n",
-    "            2: 1\n",
-    "        }\n",
     "\n",
     "    def compute_value(self, n):\n",
     "        if n > self.i:\n",
@@ -704,6 +680,11 @@
     "            return Point(x_possible, y_possible, self.find_values(x_possible, y_possible), prev_point.direction)\n",
     "    \n",
     "    def find_values(self, x, y):\n",
+    "        \"\"\"sum values that are in the 3x3 grid around a Point\n",
+    "        \n",
+    "        because these are done when each square is generated, only the pre-existing squares\n",
+    "        will be included in the resulting total.\n",
+    "        \"\"\"\n",
     "        total = 0\n",
     "        for i in range(-1, 2):\n",
     "            for j in range(-1, 2):\n",
@@ -717,11 +698,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "s = Spiral()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(1, 1)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.compute_value(3)"
    ]
   },
   {
@@ -732,30 +733,10 @@
     {
      "data": {
       "text/plain": [
-       "Point(1, 0)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s.compute_value(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "806"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +827,7 @@
        " 'lugbnk']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +875,7 @@
        "466"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +911,7 @@
        "251"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
