--- a/advent_of_code_2017.ipynb
+++ b/advent_of_code_2017.ipynb
@@ -930,6 +930,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day Five!\n",
+    "identifying when a set of instructions \"leads *outside* the list\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "day_five_input = []\n",
+    "with open('day5.txt', 'r') as f:\n",
+    "    for line in f.read().splitlines():\n",
+    "        day_five_input.append(int(line))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def step_count(input_):\n",
+    "    \"\"\"determine number of steps it takes to reach exit\n",
+    "    \n",
+    "    concept:\n",
+    "    - start a counter, and start at the beginning\n",
+    "    - for each step, reset the pointer, and increment the value at the previous pointer\n",
+    "    \"\"\"\n",
+    "    total_steps = 0\n",
+    "    location = 0\n",
+    "    input_length = len(input_)\n",
+    "    while location >= 0 and location < input_length:\n",
+    "        location, input_ = jump(location, input_)\n",
+    "        total_steps += 1\n",
+    "    return total_steps\n",
+    "\n",
+    "def jump(loc, instructions):\n",
+    "    new_instructions = list(instructions)\n",
+    "    new_location = loc + new_instructions[loc]\n",
+    "    new_instructions[loc] += 1\n",
+    "    return new_location, new_instructions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test\n",
+    "assert step_count([0, 3, 0, 1, -3]) == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "387096"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "step_count(day_five_input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part two!\n",
+    "this time, if the offset is three or more, then we decrease it by one.\n",
+    "\n",
+    "we can accomplish this with a little modification of our `jump` function. the movement function will change a little, and we'll inject it into our step count function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def step_count_two(input_, movement_function):\n",
+    "    \"\"\"determine number of steps it takes to reach exit\n",
+    "    \n",
+    "    concept:\n",
+    "    - start a counter, and start at the beginning\n",
+    "    - for each step, reset the pointer, and increment the value at the previous pointer\n",
+    "    \"\"\"\n",
+    "    total_steps = 0\n",
+    "    location = 0\n",
+    "    input_length = len(input_)\n",
+    "    # for performance, to avoid having to re-instantiate the list in `jump_two`\n",
+    "    copied_input = list(input_)\n",
+    "    while location >= 0 and location < input_length:\n",
+    "        location, input_ = movement_function(location, input_)\n",
+    "        total_steps += 1\n",
+    "    return total_steps\n",
+    "\n",
+    "\n",
+    "def jump_two(loc, instructions):\n",
+    "    new_location = loc + instructions[loc]\n",
+    "    if instructions[loc] >= 3:\n",
+    "        instructions[loc] -= 1\n",
+    "    else:\n",
+    "        instructions[loc] += 1\n",
+    "    return new_location, instructions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test\n",
+    "assert step_count_two([0, 3, 0, 1, -3], jump_two) == 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28040648"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "step_count_two(day_five_input, jump_two)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
