Add code and input for Day 6

--- a/advent_of_code_2017.ipynb
+++ b/advent_of_code_2017.ipynb
@@ -1081,6 +1081,182 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day Six!\n",
+    "\n",
+    "- memory bank with most blocks (tie goes to lowest-numbered) is redistributed, one at a time, by index. the block can be assigned back to itself\n",
+    "- look for blocks-in-banks configuration that has been seen before"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "day_six_input = []\n",
+    "with open('day6.txt', 'r') as f:\n",
+    "    reader = csv.reader(f, delimiter='\\t')\n",
+    "    for row in reader:\n",
+    "        day_six_input += [int(x) for x in row]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 1, 10, 0, 1, 7, 13, 14, 3, 12, 8, 10, 7, 12, 0, 6]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_six_input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, so we can store the distributions that we've seen before as a set of tuples.\n",
+    "\n",
+    "For the iteration, we should have a function that accepts a list and returns a list. Then another function (or the caller of the iteration?) can check to see if the state has been seen before."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "def count_redistributions(input_: List[int]):\n",
+    "    \"\"\"find first max of input_ and then redistribute. return the list after redistribution\n",
+    "    \"\"\"\n",
+    "    seen_distributions = set()\n",
+    "    cycles = 0\n",
+    "    while tuple(input_) not in seen_distributions:\n",
+    "        seen_distributions.add(tuple(input_))\n",
+    "        input_ = redistribute(input_)\n",
+    "        cycles += 1\n",
+    "    return cycles\n",
+    "\n",
+    "\n",
+    "def redistribute(data: List[int]):\n",
+    "    max_ = max(data)\n",
+    "    min_index = min([i for i, x in enumerate(data) if x == max_])\n",
+    "    value_to_redistribute = data[min_index]\n",
+    "    data[min_index] = 0\n",
+    "    for i in range(1, value_to_redistribute + 1):\n",
+    "        data[(min_index + i) % len(data)] += 1\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test\n",
+    "day6_test_data = [0, 2, 7, 0]\n",
+    "assert count_redistributions(day6_test_data) == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5042"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_redistributions(day_six_input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Part two:\n",
+    "\n",
+    "okay, so this time, we're interested in the size of the cycle.\n",
+    "\n",
+    "so, we need to keep track of _when_ the first tuple is seen. we can do this with a dictionary instead of a set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "def count_redistributions_two(input_: List[int]):\n",
+    "    \"\"\"find first max of input_ and then redistribute. return the list after redistribution\n",
+    "    \"\"\"\n",
+    "    seen_distributions = dict()\n",
+    "    cycles = 0\n",
+    "    while tuple(input_) not in seen_distributions:\n",
+    "        seen_distributions[tuple(input_)] = cycles\n",
+    "        input_ = redistribute(input_)\n",
+    "        cycles += 1\n",
+    "    return cycles - seen_distributions[tuple(input_)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test\n",
+    "assert count_redistributions_two(day6_test_data) == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1086"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_redistributions_two(day_six_input)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
